--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "lucide-react": "^0.469.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
