--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
@@ -20,11 +22,13 @@
     "lucide-react": "^0.469.0",
     "next": "14.2.3",
     "react": "^18",
+    "react-advanced-cropper": "^0.20.0",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "react-image-crop": "^11.0.7",
     "react-redux": "^9.2.0",
+    "react-share": "^5.1.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
