--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@reduxjs/toolkit": "^2.5.0",
+    "@types/lodash.debounce": "^4.0.9",
+    "@types/react-text-truncate": "^0.19.0",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.469.0",
     "next": "14.2.3",
     "react": "^18",
@@ -26,9 +31,11 @@
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
+    "react-icons": "^5.4.0",
     "react-image-crop": "^11.0.7",
     "react-redux": "^9.2.0",
     "react-share": "^5.1.2",
+    "react-text-truncate": "^0.19.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
