--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.469.0",
     "next": "14.2.3",
+    "next-share": "^0.27.0",
     "react": "^18",
     "react-advanced-cropper": "^0.20.0",
     "react-dom": "^18",
